# ESP32_Screen_Controller

./: AGENTS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.claude/: settings.local.json
components/oled/: CMakeLists.txt  oled.c
components/oled/include/: oled.h
components/profiler/: CMakeLists.txt  profiler.c
components/profiler/include/: profiler.h
components/serial_link/: CMakeLists.txt  serial_link.c
components/serial_link/include/: serial_link.h
main/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_oled.c  test_on_rx.c  test_profiler.c  test_serial_link.c
tests/stubs/: esp_err.h  esp_idf_version.h  esp_lcd_panel_dev.h  esp_lcd_panel_io.h  esp_lcd_panel_ops.h  esp_lcd_panel_vendor.h  esp_lcd_stub.h  esp_lcd_stubs.c  esp_log.h  esp_stubs.c  esp_system.h  esp_timer.h  freertos_stubs.c  oled_stub.c  oled_stub.h  profiler.h  profiler_hw_stubs.c  profiler_stub.c  profiler_stub.h  profiler_test_access.h  sdkconfig.h  serial_link_stub.c  uart_stubs.c
tests/stubs/driver/: i2c_master.h  uart.h
tests/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
web_app/: index.html  ref.html
